@@ -1328,7 +1328,7 @@ written to \texttt{output/mirabelle.log}.
 
 \begin{verbatim}
 isabelle mirabelle -d $AFP -O output \
-  -A "sledgehammer[provers = e, timeout = 5, keep = true]" \
+  -A "sledgehammer[provers = e, timeout = 5, keep_probs = true]" \
   VeriComp
 \end{verbatim}
 
