@@ -43,6 +43,15 @@ since Isabelle2019). INCOMPATIBILITY, use \<open>cartouche\<close> syntax instea
     INCOMPATIBILITY.
   - Added support for TX0 and TX1 TPTP formats and $ite/$let expressions
     in TH0 and TH1.
+  - Replaced option "sledgehammer_atp_dest_dir" by
+    "sledgehammer_atp_problem_dest_dir", for problem files, and
+    "sledgehammer_atp_proof_dest_dir", for proof files. Minor INCOMPATIBILITY.
+
+* Mirabelle:
+  - Replaced sledgehammer option "keep" by
+    "keep_probs", for problems files, and
+    "keep_proofs" for proof files. Minor INCOMPATIBILITY.
+
 
 
 *** System ***
